@@ -1,3 +1,8 @@
+2025-06-26  Rubén Rubio <rubenrub@ucm.es>
+
+	* view.cc (handleStratAwkwardCase): removed call to
+	addStratMappingVarIndices
+
 2025-06-18  Saruman the White  <eker@eker10>
 
 	* ooProcess.cc (SyntacticPreModule::processClassSorts): use
